Implement GET Click Track endpoint
