# src/Application/Service/Api/ClickTrack/GetClickTrack/GetClickTrackResponse.php
@@ -1,0 +1,10 @@
+<?php
+
+namespace ParkimeterAffiliates\Application\Service\Api\ClickTrack\GetClickTrack;
+
+use ParkimeterAffiliates\Application\Service\Api\ClickTrack\ClickTrackResponse;
+
+class GetClickTrackResponse extends ClickTrackResponse
+{
+
+}
