# src/Infrastructure/Persistance/Repository/Doctrine/ClickTrack/ClickTrackRepository.php
@@ -1,0 +1,63 @@
+<?php
+
+namespace ParkimeterAffiliates\Infrastructure\Persistance\Repository\Doctrine\ClickTrack;
+
+use Doctrine\ORM\Tools\Pagination\Paginator;
+use ParkimeterAffiliates\Domain\Model\ClickTrack\ClickTrackRepository as ClickTrackRepositoryInterface;
+use ParkimeterAffiliates\Domain\Model\ClickTrack\ClickTrack;
+use \Doctrine\ORM\EntityRepository;
+
+/**
+ * ClickTrackRepository
+ *
+ * This class was generated by the Doctrine ORM. Add your own custom
+ * repository methods below.
+ */
+class ClickTrackRepository extends EntityRepository implements ClickTrackRepositoryInterface
+{
+
+    /**
+     * Returns entity with given id
+     *
+     * @param int $id
+     * @return null|ClickTrack
+     */
+    public function findById(int $id): ?ClickTrack
+    {
+        return $this->find($id);
+    }
+
+    /**
+     * Returns all entities
+     *
+     * @param array $orderBy
+     * @return array
+     */
+    public function findAll(array $orderBy = null): array
+    {
+        return $this->findBy(
+            array(),
+            isset($orderBy) ? $orderBy : array()
+        );
+    }
+
+    /**
+     * @param int $firstResult
+     * @param int $maxResult
+     * @return Paginator
+     */
+    public function findAllPaginated(int $firstResult, int $maxResult): Paginator
+    {
+        $entityManager = $this->getEntityManager();
+
+
+        $dql = "SELECT a 
+                FROM ParkimeterAffiliates\Domain\Model\ClickTrack\ClickTrack a";
+
+        $query = $entityManager->createQuery($dql)
+            ->setFirstResult($firstResult)
+            ->setMaxResults($maxResult);
+
+        return new Paginator($query, $fetchJoinCollection = true);
+    }
+}
